tests/baselines/reference/circularBindingElementTypeResolution.errors.txt
circularBindingElementTypeResolution.ts(2,7): error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number'.
circularBindingElementTypeResolution.ts(2,9): error TS2339: Property 'c' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(2,12): error TS2339: Property 'f' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(2,43): error TS2448: Block-scoped variable 'f' used before its declaration.
circularBindingElementTypeResolution.ts(5,7): error TS2322: Type '{ a: number; f2: any; }' is not assignable to type 'string | number'.
circularBindingElementTypeResolution.ts(5,9): error TS2339: Property 'a' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(5,12): error TS2339: Property 'f2' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(5,53): error TS2448: Block-scoped variable 'f2' used before its declaration.
circularBindingElementTypeResolution.ts(8,7): error TS2322: Type '{ a2: any; f3: any; }' is not assignable to type 'string | number'.
circularBindingElementTypeResolution.ts(8,9): error TS2339: Property 'a2' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(8,13): error TS2339: Property 'f3' does not exist on type 'string | number'.
circularBindingElementTypeResolution.ts(8,43): error TS2448: Block-scoped variable 'f3' used before its declaration.
circularBindingElementTypeResolution.ts(8,51): error TS2448: Block-scoped variable 'a2' used before its declaration.
circularBindingElementTypeResolution.ts(11,80): error TS2322: Type 'string' is not assignable to type 'number'.
circularBindingElementTypeResolution.ts(11,83): error TS2448: Block-scoped variable 'y' used before its declaration.
circularBindingElementTypeResolution.ts(11,83): error TS2454: Variable 'y' is used before being assigned.
circularBindingElementTypeResolution.ts(11,86): error TS2322: Type 'number' is not assignable to type 'string'.
circularBindingElementTypeResolution.ts(11,89): error TS2448: Block-scoped variable 'x' used before its declaration.
circularBindingElementTypeResolution.ts(11,89): error TS2454: Variable 'x' is used before being assigned.


==== circularBindingElementTypeResolution.ts (19 errors) ====
    // Test case 1: Simple self-reference with shorthand property
    const { c, f }: string | number = { c: 0, f };
          ~~~~~~~~
!!! error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number'.
            ~
!!! error TS2339: Property 'c' does not exist on type 'string | number'.
               ~
!!! error TS2339: Property 'f' does not exist on type 'string | number'.
                                              ~
!!! error TS2448: Block-scoped variable 'f' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:2:12: 'f' is declared here.
    
    // Test case 2: Self-reference with expression
    const { a, f2 }: string | number = { a: 0, f2: (1 + f2) };
          ~~~~~~~~~
!!! error TS2322: Type '{ a: number; f2: any; }' is not assignable to type 'string | number'.
            ~
!!! error TS2339: Property 'a' does not exist on type 'string | number'.
               ~~
!!! error TS2339: Property 'f2' does not exist on type 'string | number'.
                                                        ~~
!!! error TS2448: Block-scoped variable 'f2' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:5:12: 'f2' is declared here.
    
    // Test case 3: Circular reference between two binding elements
    const { a2, f3 }: string | number = { a2: f3, f3: a2 };
          ~~~~~~~~~~
!!! error TS2322: Type '{ a2: any; f3: any; }' is not assignable to type 'string | number'.
            ~~
!!! error TS2339: Property 'a2' does not exist on type 'string | number'.
                ~~
!!! error TS2339: Property 'f3' does not exist on type 'string | number'.
                                              ~~
!!! error TS2448: Block-scoped variable 'f3' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:8:13: 'f3' is declared here.
                                                      ~~
!!! error TS2448: Block-scoped variable 'a2' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:8:9: 'a2' is declared here.
    
    // Test case 4: Nested destructuring with self-reference
    const { nested: { x, y } }: { nested: { x: number, y: string } } = { nested: { x: y, y: x } };
                                                                                   ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 circularBindingElementTypeResolution.ts:11:41: The expected type comes from property 'x' which is declared here on type '{ x: number; y: string; }'
                                                                                      ~
!!! error TS2448: Block-scoped variable 'y' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:11:22: 'y' is declared here.
                                                                                      ~
!!! error TS2454: Variable 'y' is used before being assigned.
                                                                                         ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 circularBindingElementTypeResolution.ts:11:52: The expected type comes from property 'y' which is declared here on type '{ x: number; y: string; }'
                                                                                            ~
!!! error TS2448: Block-scoped variable 'x' used before its declaration.
!!! related TS2728 circularBindingElementTypeResolution.ts:11:19: 'x' is declared here.
                                                                                            ~
!!! error TS2454: Variable 'x' is used before being assigned.
    